Fix picture in picture prompt on firefox again

--- a/projects.css
+++ b/projects.css
@@ -61,7 +61,7 @@
     position: absolute;
     left:0;
     top:0;
-    width:120%; /*Should be 100%; Firefox displays picture-in-picture prompt*/
+    width:140%; /*Should be 100%; Firefox displays picture-in-picture prompt*/
     height:100%;
     object-fit:cover;
     object-position: center;
